# voting_system

./: .replit  SysAdmin Template  app.py  blockchain_data.json  config.py  erl_crash.dump  models.py  note.text  password_generator.py  pyproject.toml  requirements.txt  supabase_client.py  voting_system.sql
.hex/: cache.ets
static/css/: UNIVOTE.css  admin_dash.css  admin_dashboard1.css  classroom_results.css  dashboard.css  design2.css  design4.css  index.css  manage_dashboards.css  register1.css  register_admin1.css  vote_tally_style.css  voting_statistics.css
static/js/: classroom_results.js  manage_dashboards.js  results.js
templates/: UNIVOTE.html  UNIVOTE_official.html  activity.html  admin_dash.html  admin_dashboard.html  admin_manage_candidates.html  admin_manage_poll.html  admin_manage_settings.html  admin_manage_students.html  admin_vote_results_report.html  blockchain  blockchain.html  candidate_details.html  candidates.html  classroom_admin_dash.html  classroom_candidate_details.html  classroom_candidates.html  classroom_dashboard.html  classroom_manage_candidates.html  classroom_manage_poll.html  classroom_manage_settings.html  classroom_statistics.html  classroom_students.html  classroom_view_results.html  classroom_vote_receipt.html  contacts.html  dashboard.html  edit_candidate.html  edit_classroom_candidate.html  forgot_password.html  help.html  login.html  login2.html  main_dashboard.html  manage_candidates.html  manage_dashboards.html  manage_poll.html  manage_settings.html  manage_students.html  receipt_message.html  (+19 more)
(+1 files in other folders)
