[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy",
    "werkzeug>=3.1.3",
    "pymysql",
    "psycopg2-binary",
    "pycryptodome",      # <-- Added for AES support
]